examples/error.txt
Saving model...
Traceback (most recent call last):
  File "/home/andy/deepgrad/simd_tensor_backend/examples/train.py", line 114, in <module>
    train(model, optimizer, "mnist_train.bin", "mnist_test.bin", epochs=5, batch_size=32)
  File "/home/andy/deepgrad/simd_tensor_backend/examples/train.py", line 92, in train
    dill.dump(model.state_dict(), f)
  File "/home/andy/deepgrad/new/venv/lib/python3.12/site-packages/dill/_dill.py", line 260, in dump
    Pickler(file, protocol, **_kwds).dump(obj)
  File "/home/andy/deepgrad/new/venv/lib/python3.12/site-packages/dill/_dill.py", line 428, in dump
    StockPickler.dump(self, obj)
  File "/usr/lib/python3.12/pickle.py", line 481, in dump
    self.save(obj)
  File "/home/andy/deepgrad/new/venv/lib/python3.12/site-packages/dill/_dill.py", line 422, in save
    StockPickler.save(self, obj, save_persistent_id)
  File "/usr/lib/python3.12/pickle.py", line 554, in save
    f(self, obj)  # Call unbound method with explicit self
    ^^^^^^^^^^^^
  File "/home/andy/deepgrad/new/venv/lib/python3.12/site-packages/dill/_dill.py", line 1262, in save_module_dict
    StockPickler.save_dict(pickler, obj)
  File "/usr/lib/python3.12/pickle.py", line 966, in save_dict
    self._batch_setitems(obj.items())
  File "/usr/lib/python3.12/pickle.py", line 990, in _batch_setitems
    save(v)
  File "/home/andy/deepgrad/new/venv/lib/python3.12/site-packages/dill/_dill.py", line 422, in save
    StockPickler.save(self, obj, save_persistent_id)
  File "/usr/lib/python3.12/pickle.py", line 597, in save
    self.save_reduce(obj=obj, *rv)
  File "/usr/lib/python3.12/pickle.py", line 711, in save_reduce
    save(state)
  File "/home/andy/deepgrad/new/venv/lib/python3.12/site-packages/dill/_dill.py", line 422, in save
    StockPickler.save(self, obj, save_persistent_id)
  File "/usr/lib/python3.12/pickle.py", line 554, in save
    f(self, obj)  # Call unbound method with explicit self
    ^^^^^^^^^^^^
  File "/home/andy/deepgrad/new/venv/lib/python3.12/site-packages/dill/_dill.py", line 1262, in save_module_dict
    StockPickler.save_dict(pickler, obj)
  File "/usr/lib/python3.12/pickle.py", line 966, in save_dict
    self._batch_setitems(obj.items())
  File "/usr/lib/python3.12/pickle.py", line 990, in _batch_setitems
    save(v)
  File "/home/andy/deepgrad/new/venv/lib/python3.12/site-packages/dill/_dill.py", line 422, in save
    StockPickler.save(self, obj, save_persistent_id)
  File "/usr/lib/python3.12/pickle.py", line 572, in save
    rv = reduce(self.proto)
         ^^^^^^^^^^^^^^^^^^
TypeError: cannot pickle '_cffi_backend.__CDataOwn' object
